<resources>
    <string name="app_name">Flashlight</string>
    <string name="permdesc_flashlight">Permission to use the flashlight</string>
    <string name="action_settings">Settings</string>


    <!--Used by preferences-->
    <string name="pref_light_on_title">Light on</string>
    <string name="pref_ligth_on_summary_on">Light is on</string>
    <string name="pref_ligth_on_summary_off">Light is off</string>
    <string name="pref_light_on_key" translatable="false">light_on</string>

    <string name="pref_screen_color_key" translatable="false">screen_color</string>
    <string name="pref_screen_color_title">Screen color</string>
    <string name="pref_screen_color_summary">Pick a screen color</string>
    <string name="pref_screen_color_dialog_title">Pick a screen color</string>

    <string name="pref_screen_color_label_white">White</string>
    <string name="pref_screen_color_label_black">Black</string>
    <string name="pref_screen_color_value_black" translatable="false">black</string>
    <string name="pref_screen_color_value_white" translatable="false">white</string>
</resources>
